# pitch-tunneling-analyzer

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: tests.yml
docs/: project_plan.md
examples/: tunneling_demo.py
notebooks/: 01_build_pairs_and_features.ipynb  02_effectiveness_and_models.ipynb  03_pitcher_profiles.ipynb
src/data/: fetch_statcast.py  pair_builder.py
src/features/: tunneling.py
src/metrics/: outcomes.py
src/viz/: pair_maps.py
tests/: test_metrics.py
tunneling/: data.py  metrics.py  sequences.py
tunneling/data/: sample_pitches.csv
