[project]
name = "pitch-tunneling-analyzer"
version = "0.1.0"
description = "Sequence-level pitch tunneling metrics (RP, SD, TunnelScore) and outcome evaluation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jonas Dixon" }]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "scipy>=1.10",
  # Optional: uncomment if you want built-in Statcast fetch
  # "pybaseball>=2.2"
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "black>=24.3.0", "ruff>=0.4.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tunneling"]

[tool.setuptools.package-data]
tunneling = ["data/*.csv"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100